--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-    "name" : "NodeShop",
-    "version" : "0.0.6",
-    "dependencies" : {
-        "express" : "*",
-        "jade" : "*",
-        "passport" : "*",
-        "passport-local" : "*",
-        "connect-mongo" : "*",
-        "mongoose" : "*",
-        "bcrypt" : "*",
-        "underscore" : "*",
-        "request" : "*",
-        "querystring" : "*"
-    }
+  "name": "NodeShop",
+  "version": "0.0.6",
+  "dependencies": {
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.1",
+    "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.15.2",
+    "express-session": "^1.15.2",
+    "jade": "^1.11.0",
+    "mongoose": "^4.9.8",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "querystring": "^0.2.0",
+    "request": "^2.81.0",
+    "underscore": "^1.8.3"
+  }
 }
